src/test/deca/syntax/valid/provided/increment.deca
/*/ Description:
//    Programme faisant correctement l'opération de multiplication
//
// Resultats:
//    12
//
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
	int y = 4;
	int z;
	z = x*y;
	println(z);
}
