src/test/deca/syntax/invalid/provided/debut_ligne.deca
/*/ Description:
//    Programme qui commence par un symbol mal placé
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe
//
// Historique:
//    cree le 01/01/2022*/

{
        ;println("Hello")
}
